--- a/style/style.css
+++ b/style/style.css
@@ -470,6 +470,12 @@ section {
   color: #fff;
   font-size: 1.2rem;
 }
+.buttons{
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
 
 /* Contact Section */
 .contact-section {
